--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>persistencia</module>
+        <module>negocio</module>
     </modules>
 
     <parent>
